grammar.js
    source_file: $ => repeat(
      choice(
        $.statement,
        $.comment
      )
    ),

    statement: $ => prec(30,
      seq(
        $.statement_without_semicolon,
        ';'
      )
    ),

    statement_without_semicolon: $ =>
      prec(25,
        choice(
          prec(20, $.loop_statement),
          prec(20, $.if_statement),
          prec(20, $.for_statement),
          prec(20, $.while_statement),
          prec(20, $.repeat_statement),

          prec(11, $.variable_table_declaration),
          prec(10, $.set_declaration),
          prec(10, $.table_declaration),
          prec(9, $.parameter_declaration),
          prec(9, $.scalar_declaration),
          prec(9, $.variable_declaration),
          prec(9, $.equation_declaration),
          prec(9, $.model_declaration),
          prec(9, $.solve_statement),
          prec(9, $.display_statement),
          prec(9, $.option_statement),
          prec(9, $.acronym_declaration),

          $.alias_declaration,
          $.break_statement,
          $.continue_statement,
          $.abort_statement,
          prec(2, $.equation_definition),
          prec(1, $.assignment_statement)
        )
    ),

    // utils
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
    set_element: $ => /[a-zA-Z_][a-zA-Z0-9_\-]*/,
    set_element_selection: $ => choice(
      $.set_element,
      seq(
        token("("), commaSep1($.set_element), token(")")
      ),
      seq($.set_element, "*", $.set_element),
      seq($.number, "*", $.number)
    ),

    identifier_with_domain: $ =>
      prec(3,
        seq(
          $.identifier,
          token.immediate('('),
          $.identifier_with_domain_args,
          ')'
        )
    ),

    identifier_with_domain_args: $ =>
      seq(
        choice($.identifier, '*'),
        optional(
          prec(3, repeat(seq(',', choice($.identifier, '*'))))
        )
      ),

    indexed_reference: $ => 
      prec(2,
        seq(
          $.identifier,
          optional(
            seq(
              token.immediate('.'),
              $.variable_attribute_keyword
            )
          ),
          token.immediate('('),
          $.indexed_reference_args,
          ')'
        )
      ),

    indexed_reference_args: $ =>
      seq(
        $.index_element,
        optional(
          prec(2, repeat(
            seq(
            ',',
            $.index_element
          )
        )))
      ),
    
    index_element: $ =>
      choice(
          $.string,
          seq($.identifier, '*', $.identifier),
          seq($.identifier, '+', $.number),
          seq($.number, '*', $.number),
          $.identifier_with_domain,
          $.identifier,
          $.number
        ),

    number: $ => /[+-]?(?:\d+\.?\d*|\.\d+)([eE][+-]?\d+)?/,

    string: $ => choice(
      seq('"', repeat(/[^"]/), '"'),
      seq("'", repeat(/[^']/), "'")
    ),

    // set declaration

    parameter_keyword: $ => prec(10,
      choice(
        token.immediate(caseInsensitive('parameter')),
        token.immediate(caseInsensitive('parameters'))
      )
    ),

    parameter_declaration: $ =>
      seq(
        $.parameter_keyword,
        commaOrNewlineSep1($.param_entry)
      ),

    param_entry: $ => seq(
      choice(
        $.identifier_with_domain,    // param_name(index_list)
        $.identifier               // param_name
      ),
      optional($.string),           // ["text"]
      optional(choice(
        seq(/\r?\n/, $.param_data_block),  // next-line form: GLR separates this from the \n separator
        $.param_data_block                  // same-line form
      ))
    ),

    param_data_block: $ => seq(
      '/',
      commaOrNewlineSep1($.param_assignment),
      '/'
    ),

    param_assignment: $ => seq(
      $.index_atom,                 // element or tuple (i1, i1.j1, etc.)
      optional('='),                // optional equals sign
      field('value', choice($.number, $.identifier))  // number or acronym identifier
    ),

    // variable declaration
    index_atom: $ => seq(
      $.set_element_selection,
      repeat(seq('.', $.set_element_selection))
    ),

    expression: $ => 
      prec(3,
        choice(
          prec.left(5, $.unary_builtin_function_expr),
          prec.left(4, $.binary_builtin_function_expr),
          prec.left(3, $.multi_args_builtin_function_expr),
          prec.left(2, $.number),
          prec.left(2, $.bool),
          prec.left(2, $.string),
          prec.left(2, $.unary_expr),
          prec.left(2, $.indexed_reference),
          prec.left(2, $.paren_expr),
          prec.left(2, $.binary_expr),
          prec.left(2, $.indexed_operation),
          prec.left(1, $.reference),
        // $.call_expr,
          $.conditional_expr,
          prec.left(-1, alias($.identifier, $.bare_identifier)),
      )),

    paren_expr: $ => seq('(', $.expression, ')'),

    binary_operator_keyword : $ => choice(
      token('+'), token('-'), token('*'), token('/'), token('**'),
      token('>'), token('<'), token('>='), token('<='), token('<>'),
      token('='),   // equality comparison in conditions (e.g. if / until)
      token(caseInsensitive('and')), token(caseInsensitive('or')),
      token(caseInsensitive('gt')), token(caseInsensitive('lt')),
      token(caseInsensitive('ge')), token(caseInsensitive('le')),
      token(caseInsensitive('ne')),
      token(caseInsensitive('eq')),
      token(caseInsensitive('mod'))
    ),

    binary_expr: $ => prec.left(1, seq(
      $.expression,
      $.binary_operator_keyword,
      $.expression
    )),

    index_list: $ =>
      choice(
        $.index_element,
        seq(
          token('('),
          $.index_element,
          optional(
              seq(
                ',',
                $.index_element
              )
            ),
          token(')')
          )
        ),

    assignment_statement: $ =>
      prec(1,
        seq(
          field(
            "left_hand_side",
            choice(
              $.indexed_reference,
              $.reference,
              $.identifier, // i
            )
          ),
          optional(
            field("condition",
              prec(2,
                seq(
                  '$',
                  $.expression
                )
              )
            )
          ),
          '=',
          field("right_hand_side",
            $.expression
          )
        )
      ),

    // Equation definitions  (eqn_name(domain)[$cond].. lhs =e= rhs)

    loop_keyword: $ => token.immediate(caseInsensitive('loop')),

    loop_statement: $ => prec(20,
      seq(
        $.loop_keyword,
        token('('),
        $.index_list,
        optional(
          seq(
            '$',
            $.expression
          )
        ),
        token(','),
        repeat($.statement),
        optional(
          $.statement_without_semicolon,
        ),
        token(')')
      )
    ),

    // for loop: for(scalar = start to|downto end [by step], statements)
    abort_statement: $ => seq(
      'abort',
      optional(choice(
        seq(token.immediate('.'), token.immediate(/[nN][oO][eE][rR][rR][oO][rR]/)),
        seq(token.immediate('$'), $.expression)
      )),
      commaSep1(choice($.string, $.identifier))
    ),

    // option[s] item, item, ...
    acronym_keyword: $ => prec(9, choice(
      token.immediate(caseInsensitive('acronym')),
      token.immediate(caseInsensitive('acronyms'))
    )),

    acronym_declaration: $ => seq(
      $.acronym_keyword,
      commaOrNewlineSep1($.acronym_entry)
    ),

    acronym_entry: $ => seq(
      $.identifier,
      optional($.string)
    ),

    // table declaration: table name(domain) ["text"] body
